Changes from jTDS 0.9
=========================

11/24/2004 - Alin Sinpalean
 o Extracted getConnection(callerReference) out of BlobImpl and ClobImpl and
   moved it to Support.
 o Created the CharsetInfo class to hold both information about a character set
   (non-static fields) and provide support for loading and retrieving character
   sets (static fields and methods; the logic was moved from Support).
 o Added comments to highlight possible problem areas with multi-byte character
   sets.
 o Started adding support for SQL Server 2000 per column collations.
 o Other minor cleanups.

11/23/2004 - Alin Sinpalean
 o Corrected bug [1071397] Error in prepared statement (parameters in outer
   join escapes are not recognized).

11/19/2004 - Alin Sinpalean
 o Replaced the ColData copy constructor with clone().
 o Added tests to ensure Blob.getBytes(0, length) and Clob.getSubString(0,
   length) fail.

11/18/2004 - Alin Sinpalean
 o More performance improvements: instead of creating new ParamInfo instances
   for each sp_XXX call, the same objects are reused both for fixed parameters
   (optype, fetchtype etc.) and updated column values; also, for addBatch() the
   ParamInfo copy constructor was replaced with clone().
 o Tweaked initial StringBuffer sizes to prevent reallocation as much as
   possible.
 o Corrected a bug that was causing Date values to be inserted just like
   Timestamps (i.e. including the time component).

11/17/2004 - Alin Sinpalean
 o Tiny performance tweaks.
 o Added jta.jar to lib folder to ensure compilation works under Java 1.3.
 o Corrected a problem in ReaderOutputStream that was causing read(byte[]) to
   always return the size of the byte array even if less data was read.
 o Fixed a problem with absolute(-1) (the row position was incorrectly
   updated).
 o Improved performance of MSCursorResultSet, by replacing sp_cursor FETCH_INFO
   calls with simple operations mimicking the behavior of SQL Server